--- a/api/.env
+++ b/api/.env
@@ -1,8 +1,20 @@
 //.env
 
-MONGO_URL="mongodb+srv://sahusuhani14:suhani.akgec123@cluster0.abou9zt.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URL="mongodb+srv://chihiro:minusahu1411@cluster0.2itcu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT=8800
 KEY='suhanisahu123'
 
 ClientID=964875944219-0qvro11im0ce48oia0apvbl4lj36jgqq.apps.googleusercontent.com
 ClientSecret=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
+
+
+
+
+
+
+
+
+
+
+
+
